# Constellation_Overwatch

./: .black_formatting_complete  .ci_improvements_complete  .gitattributes  .gitignore  AI_FORMATTING_GUIDELINES.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  DOCUMENTATION_CONSOLIDATION.md  FUNCTIONAL_CORE_SUCCESS.md  ISSUES_LOG.md  LICENSE  NEXT_STEPS.md  PROJECT_STATUS.md  PULL_REQUEST_TEMPLATE.md  README.md  ROADMAP.md  SDK_COMPLETE.md  SDK_VERSION.md  SECURITY.md  STATUS.md  SUPPORT.md  constellation-overwatch-hybrid.code-workspace  demo_functional_core.py  docker-compose.yml  gus-ros-workspace.code-workspace  launch_demo.py  pyproject.toml  requirements-ci.txt  requirements.txt  setup.py
.github/: CODE_OF_CONDUCT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docker/: Dockerfile.ai  Dockerfile.constellation  Dockerfile.gazebo  Dockerfile.ros  Dockerfile.simulation  package.xml
docs/: COMMUNITY_GUIDELINES.md  ISSUES_AND_DECISIONS.md  MOSA_MBSE_GUIDELINES.md  PROJECT_STATUS.md  PROJECT_STATUS_UPDATE.md  quick-reference-tak-ports-protocols.md  tak-compatibility-summary.md
docs/analysis/: ANALYSIS_UPDATE_GUIDELINES.md  open-architecture-comparative-analysis.md  research-methodology-mathematical-analysis.md
docs/api-analysis/: comprehensive-api-analysis.md  open-architecture-compatibility-analysis.md  research-summary.md
docs/development/: API_DOCUMENTATION.md  ARCHITECTURE.md  DEVELOPER_GUIDES.md  TESTING_GUIDE.md
docs/milestones/: FUNCTIONAL_CORE.md  README.md  SDK_TRANSFORMATION.md
docs/setup/: development-setup.md
docs/wiki/: README.md
docs/wiki/getting-started/: installation.md
docs/wiki/project/: roadmap.md
examples/: __init__.py
examples/ai-perception/: README.md  config.yaml  main.py  requirements.txt
examples/basic-drone/: main.py
examples/functional-core/: __init__.py  demo.py
examples/integrated-demo/: __init__.py  server.py
examples/light-show/: main.py
examples/text-to-ops/: main.py
examples/vr-control/: main.py
models/: README.md
scripts/: build.sh  setup.ps1  setup.sh
sdk/: __init__.py
sdk/ai/: __init__.py
sdk/ai/computer_vision/: __init__.py  image_classification.py  object_detection.py  pipeline.py  preprocessing.py  segmentation.py  tracking.py
sdk/ai/decision_making/: __init__.py  mission_planner.py  multi_objective.py  risk_assessor.py  tactical_decision.py
sdk/api/: __init__.py  rest_server.py
sdk/core/: __init__.py  entity_manager.py  message_bus.py
sdk/plugins/: __init__.py  base.py  loader.py  manager.py  registry.py  validator.py
sdk/plugins/examples/: __init__.py  simple_sensor_plugin.py
sdk/tuning/: README.md  __init__.py  auto_tuner.py  examples.py  parameter_manager.py  pid_controller.py  safety_monitor.py  simulation_tuner.py  tuning_analyzer.py  tuning_integrator.py
tests/: __init__.py  conftest.py  test_basic.py  test_computer_vision.py  test_plugins.py
training/: README.md  train_models.py
web/: dashboard.html
