[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "constellation-overwatch"
dynamic = ["version"]
description = "Professional autonomy SDK for unmanned systems integration"
authors = [{name = "Galaxy Unmanned Systems LLC", email = "development@galaxy-unmanned.com"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "pydantic>=1.10.0",
    "asyncio-mqtt>=0.13.0",
    "pyzmq>=24.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "websockets>=11.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/jwhite-GUS/Constellation_Overwatch"
Repository = "https://github.com/jwhite-GUS/Constellation_Overwatch"
Documentation = "https://github.com/jwhite-GUS/Constellation_Overwatch/docs"

[tool.setuptools.dynamic]
version = {attr = "sdk.__version__"}

[tool.setuptools.packages.find]
include = ["sdk*", "examples*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
